Fixed list alignment in top pages Fixed image references to row and column backgrounds

--- a/app/modules/stats/css/index-compliant.css
+++ b/app/modules/stats/css/index-compliant.css
@@ -1,3 +1,6 @@
+ol {
+  padding-left: 1.75em;
+}
 td {
     margin: 0;
     border: 0;
@@ -29,7 +32,7 @@ table.twelve td {
 .rowbar {
     height: 18px;
     width: 0;
-    background: #6499cb url(../../Webkit/images/rowbar.png) repeat-x;
+    background: #6499cb url(/common/images/rowbar.png) repeat-x;
     background-position: top left;
     border: none;
     -webkit-border-radius: 2px; 
@@ -50,7 +53,7 @@ table.twelve td {
     bottom: 0;
     width: 100%;
     height: 0;
-    background: #6499cb url(../../Webkit/images/colbar.png) repeat-y;
+    background: #6499cb url(/common/images/colbar.png) repeat-y;
     background-position: bottom left;
     border: none;
     -webkit-border-radius: 2px; 
